--- a/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
+++ b/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
@@ -2,24 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <title>BlazorHeightmaps.Wasm.App</title>
-    <base href="/" />
-    <link href="css/app.css" rel="stylesheet" />
-    
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="BlazorHeightmaps.Wasm.App.styles.css" rel="stylesheet" /> -->
+  <meta charset="utf-8" />
+  <title>BlazorHeightmaps.Wasm.App</title>
+  <base href="/" />
+  <link href="css/app.css" rel="stylesheet" />
+
+  <!-- If you add any scoped CSS files, uncomment the following to load them
+  <link href="BlazorHeightmaps.Wasm.App.styles.css" rel="stylesheet" /> -->
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+  <div class="top-0 bottom-0 left-0 right-0 p-10 bg-[#6677ff]">
+    <div class="bg-[#edded2]">
+      <div id="app">Loading...</div>
 
-    <div id="blazor-error-ui">
+      <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
+      </div>
+      <script src="_framework/blazor.webassembly.js"></script>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
+  </div>
 </body>
-
 </html>
