Enabled tailwind watch

--- a/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
+++ b/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8" />
   <title>BlazorHeightmaps.Wasm.App</title>
   <base href="/" />
-  <link href="css/app.css" rel="stylesheet" />
+  <link href="css/app.min.css" rel="stylesheet" />
 
   <!-- If you add any scoped CSS files, uncomment the following to load them
   <link href="BlazorHeightmaps.Wasm.App.styles.css" rel="stylesheet" /> -->
 </head>
 
 <body>
-  <div class="top-0 bottom-0 left-0 right-0 p-10 bg-[#6677ff]">
+  <div class="w-screen h-screen bg-[#aabbff] overscroll-none">
     <div class="bg-[#edded2]">
       <div id="app">Loading...</div>
 
