--- a/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
+++ b/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="w-screen h-screen overflow-hidden">
-    <div id="app">Loading...</div>
+    <div id="app" class="overflow-hidden">Loading...</div>
     <div id="blazor-error-ui">
       An unhandled error has occurred.
       <a href="" class="reload">Reload</a>
