--- a/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
+++ b/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
@@ -11,15 +11,16 @@
   <link href="BlazorHeightmaps.Wasm.App.styles.css" rel="stylesheet" /> -->
 </head>
 
-<body>
+<body class="w-screen h-screen overflow-hidden">
   <div class="w-screen h-screen overflow-hidden">
-    <div id="app" class="overflow-hidden">Loading...</div>
+    <div id="app" class="w-screen h-screen overflow-hidden">Loading...</div>
     <div id="blazor-error-ui">
       An unhandled error has occurred.
       <a href="" class="reload">Reload</a>
       <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Ambacht.Common.Blazor/Ambacht.Common.Blazor.js"></script>
   </div>
 </body>
 </html>
