--- a/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
+++ b/src/BlazorHeightmaps.Wasm.App/wwwroot/index.html
@@ -6,6 +6,7 @@
   <title>BlazorHeightmaps.Wasm.App</title>
   <base href="/" />
   <link href="css/app.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 
   <!-- If you add any scoped CSS files, uncomment the following to load them
   <link href="BlazorHeightmaps.Wasm.App.styles.css" rel="stylesheet" /> -->
